<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app_fragmants.BatchAddFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_35_gd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.46" />
        <ImageView
            android:layout_width="@dimen/_25sp"
            android:layout_height="@dimen/_25sp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/back_arrow"
            android:id="@+id/btnBackArrow"
            android:layout_margin="@dimen/_16sp"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            />
        <ImageView
            android:layout_width="@dimen/_25sp"
            android:layout_height="@dimen/_25sp"
            android:src="@drawable/tick"
            android:clickable="true"
            android:id="@+id/btnDone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_16sp"
            />
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/addAni"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/h_35_gd"
            app:lottie_rawRes="@raw/splashscreen"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bgColor"
            android:layout_marginTop="@dimen/_16sp"
            android:layout_marginBottom="-25dp"
            app:cardCornerRadius="@dimen/_50sp"
            app:layout_constraintTop_toBottomOf="@id/h_35_gd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgColor"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvBatchName"
                    android:layout_marginHorizontal="@dimen/_20sp"
                    android:layout_marginTop="@dimen/_50sp"
                    app:layout_constraintTop_toBottomOf="@+id/circularImageView"
                    android:hint="@string/batch_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBatchName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords"
                        android:padding="@dimen/_20sp"
                        android:textColor="@color/text"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvClass"
                    android:layout_margin="@dimen/_20sp"
                    app:layout_constraintTop_toBottomOf="@+id/circularImageView"
                    android:hint="@string/batch_class"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etClass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:padding="@dimen/_20sp"
                        android:textColor="@color/text"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sp"
                    android:textColor="@color/text"
                    android:layout_marginHorizontal="@dimen/_20sp"
                    android:text="@string/time"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMemName"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_20sp"
                        android:hint="@string/startTime"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMemName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="time"
                            android:padding="@dimen/_20sp"
                            android:textColor="@color/text"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/to"
                        android:textSize="@dimen/_16sp"
                        android:gravity="center"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/tvStartTime"
                        android:layout_margin="@dimen/_20sp"
                        app:layout_constraintTop_toBottomOf="@+id/circularImageView"
                        android:hint="@string/EndTime"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etStartTime"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="time"
                            android:padding="@dimen/_20sp"
                            android:textColor="@color/text"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>